--- a/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.markup-only.html
@@ -2,10 +2,9 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-			<p>Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;</p>
-			<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
+			<p>Beats all you&#039;ve ever saw, been in trouble with the law since the day they was born. Straight&#039;nin&#039; the curve, flat&#039;nin&#039; the hills. Someday the mountain might get &#039;em, but the law never will. Makin&#039; their way, the only way they know how, that&#039;s just a little bit more than the law will allow. Just good ol&#039; boys, wouldn&#039;t change if they could, fightin&#039; the system like a true modern day Robin Hood.</p>
 		<hr>
+			<p>Und round meatball, bacon pig leberkas corned beef tongue shoulder. Drumstick pork loin prosciutto ball tip shank pancetta spare ribs jowl pastrami. Frankfurter boudin filet mignon ribeye. Pig hamburger strip steak ham turducken prosciutto bresaola ground round pancetta frankfurter jowl. Frankfurter tongue brisket tenderloin, beef ribs pastrami biltong tail bresaola flank. Biltong pork chop beef boudin hamburger bacon. Capicola bresaola sausage.</p>
 			<p>Inde igitur, inquit, ordiendum est. Cui Tubuli nomen odio non est? Ne amores quidem sanctos a sapiente alienos esse arbitrantur. Ergo instituto veterum, quo etiam Stoici utuntur, hinc capiamus exordium. Hoc non est positum in nostra actione. Sed quid sentiat, non videtis.</p>
-			<p>Pulse mathewi Project Thunderdome digital first. HuffPo social media optimization try PR dying the notion of the public monetization data visualization audience atomization overcome community, libel lawyer twitterati should isn&#039;t a business model fair use innovation Facebook AOL, Walter Cronkite died for your sins horse-race coverage crowdfunding Patch but what&#039;s the business model rubber cement horse-race coverage. Lucius Nieman content farm.</p>
 	
 </div>
