--- a/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.markup-only.html
+++ b/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.markup-only.html
@@ -3,13 +3,13 @@
       <li>
       <div class="font-info" style="font-family: &quot;Open Sans&quot;, Helvetica, Arial, sans-serif;">
         <span style="font-size: 32px;">Open Sans</span> <br/>
-                				  <p>Negat enim summo bono afferre incrementum diem. Tecum optime, deinde etiam cum mediocri amico. Duo Reges: constructio interrete. Quod dicit Epicurus etiam de voluptate, quae minime sint voluptates.</p>
+                				  <p>One super guy. Hong Kong Phooey, quicker than the human eye. Hong Kong Phooey, he&#039;s fan-riffic! One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one.</p>
 				      </div>
     </li>
       <li>
       <div class="font-info" style="font-family: Georgia, &quot;Times New Roman&quot;, Times, serif;">
         <span style="font-size: 32px;">Georgia</span> <br/>
-                				  <p>Negat enim summo bono afferre incrementum diem. Tecum optime, deinde etiam cum mediocri amico. Duo Reges: constructio interrete. Quod dicit Epicurus etiam de voluptate, quae minime sint voluptates.</p>
+                				  <p>One super guy. Hong Kong Phooey, quicker than the human eye. Hong Kong Phooey, he&#039;s fan-riffic! One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one.</p>
 				      </div>
     </li>
   </ul>
