--- a/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.markup-only.html
@@ -4,7 +4,7 @@
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h1>
 		</div>
 	</div>
@@ -13,7 +13,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h2>
 		</div>
 	</div>
@@ -22,7 +22,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h3>
 		</div>
 	</div>
@@ -31,7 +31,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h4>
 		</div>
 	</div>
@@ -40,7 +40,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h5>
 		</div>
 	</div>
@@ -49,7 +49,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h6>
 		</div>
 	</div>
@@ -62,7 +62,7 @@
 			</div>
 			<div class="block-title">
 				<h1>
-											Negat esse eam
+											Philosophi autem in
 									</h1>
 			</div>
 		</div>
@@ -72,7 +72,7 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;
+									Beats all you&#039;ve ever saw, been in trouble with the law since the day they was born. Straight&#039;nin&#039; the curve, flat&#039;nin&#039; the hills. Someday the mountain might get &#039;em, but the law never will. Makin&#039; their way, the only way they know how, that&#039;s just a little bit more than the law will allow. Just good ol&#039; boys, wouldn&#039;t change if they could, fightin&#039; the system like a true modern day Robin Hood.
 							</p>
 		</div>
 	</div>
