--- a/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.markup-only.html
@@ -14,30 +14,30 @@
 							<tr>
 											<td>Row 1</td>
 																<td>Project Thunderdome</td>
-											<td>Veggies sunt bona vobis</td>
-											<td>brussels sprout</td>
+											<td>optimization</td>
 											<td>dolor sit amet</td>
+											<td>Hong Kong Phooey chop</td>
 									</tr>
 							<tr>
 											<td>Row 2</td>
-																<td>document cloud</td>
-											<td>Hong Kong Phooey chop</td>
-											<td>TGI Filet mignon</td>
-											<td>TGI Filet mignon</td>
+																<td>bean burdock</td>
+											<td>Tuesday night</td>
+											<td>optimization</td>
+											<td> </td>
 									</tr>
 							<tr>
 											<td>Row 3</td>
-																<td>Friday</td>
-											<td>brussels sprout</td>
-											<td>Tuesday night</td>
-											<td>number one super g</td>
+																<td> </td>
+											<td>Project Thunderdome</td>
+											<td>bean burdock</td>
+											<td>monetization</td>
 									</tr>
 							<tr>
 											<td>Row 4</td>
-																<td>dolor sit amet</td>
-											<td>number one super g</td>
-											<td>Blog meme masthead</td>
-											<td>A fava bean collard</td>
+																<td>optimization</td>
+											<td>Tuesday night</td>
+											<td>Hong Kong Phooey chop</td>
+											<td>bean burdock</td>
 									</tr>
 					</tbody>
 	</table>
