--- a/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
@@ -1,11 +1,11 @@
 
 	<div class="drupal-message status-message">
-					Congratulations, you're the best!
+					You are awesome at life!
 			</div>
 	<div class="drupal-message warning-message">
-					Don't put your hand on an active stove burner. <a href="#">Find out why!</a>
-
+					Beware of purse dog!
 			</div>
 	<div class="drupal-message error-message">
-					Please contact someone and tell them about this error.
+					1 error has been found: <a href="#">Image</a>
+
 			</div>
