--- a/pattern-lab/public/patterns/01-parts/index.html
+++ b/pattern-lab/public/patterns/01-parts/index.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575663264" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1575663264" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1575663264" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575663264" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575663264" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575663264" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1575663264" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575663264" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575663523" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1575663523" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1575663523" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575663523" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575663523" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575663523" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1575663523" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575663523" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575663264" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575663523" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575663264" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575663264" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575663523" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575663523" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -150,7 +150,7 @@
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h1>
 		</div>
 	</div>
@@ -159,7 +159,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h2>
 		</div>
 	</div>
@@ -168,7 +168,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h3>
 		</div>
 	</div>
@@ -177,7 +177,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h4>
 		</div>
 	</div>
@@ -186,7 +186,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h5>
 		</div>
 	</div>
@@ -195,7 +195,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Videamus animi partes, quarum est conspectus illustrio
 							</h6>
 		</div>
 	</div>
@@ -208,7 +208,7 @@
 			</div>
 			<div class="block-title">
 				<h1>
-											Negat esse eam
+											Philosophi autem in
 									</h1>
 			</div>
 		</div>
@@ -218,7 +218,7 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;
+									Beats all you&#039;ve ever saw, been in trouble with the law since the day they was born. Straight&#039;nin&#039; the curve, flat&#039;nin&#039; the hills. Someday the mountain might get &#039;em, but the law never will. Makin&#039; their way, the only way they know how, that&#039;s just a little bit more than the law will allow. Just good ol&#039; boys, wouldn&#039;t change if they could, fightin&#039; the system like a true modern day Robin Hood.
 							</p>
 		</div>
 	</div>
@@ -340,10 +340,10 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-			<p>Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;</p>
+			<p>Beats all you&#039;ve ever saw, been in trouble with the law since the day they was born. Straight&#039;nin&#039; the curve, flat&#039;nin&#039; the hills. Someday the mountain might get &#039;em, but the law never will. Makin&#039; their way, the only way they know how, that&#039;s just a little bit more than the law will allow. Just good ol&#039; boys, wouldn&#039;t change if they could, fightin&#039; the system like a true modern day Robin Hood.</p>
 		<hr>
 			<p>Tattooed Williamsburg. Jean shorts proident kogi laboris. Non tote bag pariatur elit slow-carb, Vice irure eu Echo Park ea aliqua chillwave. Cornhole Etsy quinoa Pinterest cardigan. Excepteur quis forage, Blue Bottle keffiyeh velit hoodie direct trade typewriter Etsy. Fingerstache squid non, sriracha drinking vinegar Shoreditch pork belly. Paleo sartorial mollit 3 wolf moon chambray whatever, sed tote bag small batch freegan. Master cleanse.</p>
-			<p>It&#039;s a pretty story. Sharing everything with fun, that&#039;s the way to be. One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, can sound pretty corny. If you&#039;ve got a problem chum, think how it could be. This is my boss, Jonathan Hart, a self-made millionaire, he&#039;s quite a guy. This is Mrs H., she&#039;s gorgeous, she&#039;s one lady who knows how to take care of herself.</p>
+			<p>Pulse mathewi Project Thunderdome digital first. HuffPo social media optimization try PR dying the notion of the public monetization data visualization audience atomization overcome community, libel lawyer twitterati should isn&#039;t a business model fair use innovation Facebook AOL, Walter Cronkite died for your sins horse-race coverage crowdfunding Patch but what&#039;s the business model rubber cement horse-race coverage. Lucius Nieman content farm.</p>
 	
 </div>
   </div>
@@ -386,32 +386,32 @@
 <div class="text-long constrain-text pl-space">
 	<div class="element-title">Bullet List</div>
 	<ul>
-					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
+					<li>Hong Kong Phooey, number one super g</li>
 				<li>
 			Below is a <strong>nested bullet list</strong>. Nested lists can either be either bulleted or numbered—regardless of the parent list type.
 			<ul>
 							<li>Negat esse eam</li>
-							<li>Philosophi autem in</li>
+							<li>Quae cum essent dicta</li>
 						</ul>
 		</li>
 					<li>Nesciunt sunt cillum keytar Pitchfork</li>
-					<li>Hong Kong Phooey, number one super g</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 			</ul>
 </div>
 
 <div class="text-long constrain-text">
 	<div class="element-title">Numbered List</div>
 	<ol>
-					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
+					<li>Hong Kong Phooey, number one super g</li>
 				<li>
 			Below is a <strong>nested number list</strong>.
 			<ol>
 							<li>Negat esse eam</li>
-							<li>Philosophi autem in</li>
+							<li>Quae cum essent dicta</li>
 						</ol>
 		</li>
 					<li>Nesciunt sunt cillum keytar Pitchfork</li>
-					<li>Hong Kong Phooey, number one super g</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 			</ol>
 </div>
 
@@ -644,30 +644,30 @@
 							<tr>
 											<td>Row 1</td>
 																<td>Project Thunderdome</td>
-											<td>Veggies sunt bona vobis</td>
-											<td>brussels sprout</td>
+											<td>optimization</td>
 											<td>dolor sit amet</td>
+											<td>Hong Kong Phooey chop</td>
 									</tr>
 							<tr>
 											<td>Row 2</td>
-																<td>document cloud</td>
-											<td>Hong Kong Phooey chop</td>
-											<td>TGI Filet mignon</td>
-											<td>TGI Filet mignon</td>
+																<td>bean burdock</td>
+											<td>Tuesday night</td>
+											<td>optimization</td>
+											<td> </td>
 									</tr>
 							<tr>
 											<td>Row 3</td>
-																<td>Friday</td>
-											<td>brussels sprout</td>
-											<td>Tuesday night</td>
-											<td>number one super g</td>
+																<td> </td>
+											<td>Project Thunderdome</td>
+											<td>bean burdock</td>
+											<td>monetization</td>
 									</tr>
 							<tr>
 											<td>Row 4</td>
-																<td>dolor sit amet</td>
-											<td>number one super g</td>
-											<td>Blog meme masthead</td>
-											<td>A fava bean collard</td>
+																<td>optimization</td>
+											<td>Tuesday night</td>
+											<td>Hong Kong Phooey chop</td>
+											<td>bean burdock</td>
 									</tr>
 					</tbody>
 	</table>
@@ -721,14 +721,14 @@
   <div class="sg-pattern-example">
     
 	<div class="drupal-message status-message">
-					Congratulations, you're the best!
+					You are awesome at life!
 			</div>
 	<div class="drupal-message warning-message">
-					Don't put your hand on an active stove burner. <a href="#">Find out why!</a>
-
+					Beware of purse dog!
 			</div>
 	<div class="drupal-message error-message">
-					Please contact someone and tell them about this error.
+					1 error has been found: <a href="#">Image</a>
+
 			</div>
 
   </div>
@@ -774,10 +774,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1575663264">
+<script id="pl-js-polyfill-insert-1575663523">
   (function() {
     if (self != top) {
-      var cb = '1575663264';
+      var cb = '1575663523';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -787,10 +787,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1575663264">
+<script id="pl-js-insert-1575663523">
   (function() {
     if (self != top) {
-      var cb = '1575663264';
+      var cb = '1575663523';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
